--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
 
-    <h1 id="myH1"></h1>
-    <p id="myP"></p>
-    
+    <label id="countLabel">0</label><br>
+    <div id="btnContainer">
+        <button id="decreaseBtn" class="buttons">Decrease</button>
+        <button id="resetBtn" class="buttons">Reset</button>
+        <button id="increaseBtn" class="buttons">Increase</button>
+    </div>
     <script src="index.js"></script>
 
 </body>
