--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <button id="decreaseBtn" class="buttons">Decrease</button>
         <button id="resetBtn" class="buttons">Reset</button>
         <button id="increaseBtn" class="buttons">Increase</button>
+        <br>
+        <input type="checkbox" id="myCheckBox">
     </div>
     <script src="index.js"></script>
 
