--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 
 <body>
 
-    <label id="countLabel">0</label><br>
-    <div id="btnContainer">
-        <button id="decreaseBtn" class="buttons">Decrease</button>
-        <button id="resetBtn" class="buttons">Reset</button>
-        <button id="increaseBtn" class="buttons">Increase</button>
-        <br>
-        <input type="checkbox" id="myCheckBox">
+    <div id="clock-container">
+        <div id="clock">00:00:00</div>
     </div>
+
     <script src="index.js"></script>
 
 </body>
