--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 
 <body>
 
-<<<<<<< HEAD
-    <div id="myBox">Click Me! 👀</div>
-=======
-    <input type="text" id="pokemonName" placeholder="Enter Pokemon name">
-    <button onclick=fetchData()>Fetch Pokemon</button><br>
-    <img src="" alt="Pokemon Sprite" id="pokemonSprite" style="display: none">
+    <h1>Rock - Paper - Scissors</h1>
+    <div class="choices">
+        <button onclick="playGame('rock')">👊🏽</button>
+        <button onclick="playGame('paper')">🖐🏽</button>
+        <button onclick="playGame('scissors')">✌🏽</button>
+    
+    </div>
 
->>>>>>> 8d1c68b (pokemon api)
+    <div id="playerDisplay">PLAYER: </div>
+    <div id="computerDisplay">COMPUTER: </div>
+    <div id="resultDisplay"></div>
 
     <script src="index.js"></script>
 
