--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 
 <body>
 
-    <h1>Rock - Paper - Scissors</h1>
-    <div class="choices">
-        <button onclick="playGame('rock')">👊🏽</button>
-        <button onclick="playGame('paper')">🖐🏽</button>
-        <button onclick="playGame('scissors')">✌🏽</button>
-    
+    <div class="slider">
+        <div class="slides">
+            <img src="red.png" alt="" class="slide">
+            <img src="green.png" alt="" class="slide">
+            <img src="blue.png" alt="" class="slide">
+        </div>
+        <button class="prev" onclick="prevSlide()">&#10094</button>
+        <button class="next" onclick="nextSlide()">&#10095</button>
     </div>
-
-    <div id="playerDisplay">PLAYER: </div>
-    <div id="computerDisplay">COMPUTER: </div>
-    <div id="resultDisplay"></div>
 
     <script src="index.js"></script>
 
